@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.166 2008-04-09 16:20:04 karl Exp $
+$Id: NEWS,v 1.167 2008-04-09 17:07:31 karl Exp $
 This NEWS file records noteworthy changes, very tersely.
 See the manual for detailed information.
 
@@ -25,6 +25,7 @@ one of the relevant sections:
 * Language:
   . new commands @clicksequence, @click, and @clickstyle for documenting
     GUI sequences, and @arrow for the default glyph used.
+  . new commands @geq{} and @leq{} for the normal >= and <= relations.
 
 * install-info:
   . Much work towards compatibility with Debian's independent
